# src/controllers/copiesController.js
@@ -80,7 +80,7 @@ copiesController.deleteCopy = async (req, res) => {
     #swagger.description = "Delete a copy"
     #swagger.tags = ['Copies']
     #swagger.security = [{
-        "OAuth2": ["admin"]
+        "OAuth2": ["write"]
         }]
     */
     try {
