# swagger.json
@@ -261,7 +261,7 @@
         "security": [
           {
             "OAuth2": [
-              "admin"
+              "write"
             ]
           }
         ]
@@ -450,7 +450,7 @@
         "security": [
           {
             "OAuth2": [
-              "admin"
+              "write"
             ]
           }
         ]
@@ -597,7 +597,7 @@
         "security": [
           {
             "OAuth2": [
-              "admin"
+              "write"
             ]
           }
         ]
@@ -763,7 +763,7 @@
         "security": [
           {
             "OAuth2": [
-              "admin"
+              "write"
             ]
           }
         ]
@@ -771,17 +771,16 @@
     }
   },
   "components": {
-    "securitySchemes": {
-      "openIdConnect": {
+    "securityDefinitions": {
+      "Auth0": {
         "type": "oauth2",
         "flows": {
-          "authorizationCode": {
+          "implicit": {
             "authorizationUrl": "https://dev-goq8gdaydc0qfbbz.us.auth0.com/authorize",
             "tokenUrl": "https://dev-goq8gdaydc0qfbbz.us.auth0.com/oauth/token",
             "scopes": {
               "read": "Grants read access",
-              "write": "Grants write access",
-              "admin": "Grants access to admin operations"
+              "write": "Grants write access"
             }
           }
         }
